# lab2_5th_semester

./: CMakeLists.txt  Element.h  Keeper.cpp  Keeper.h  List.cpp  List.h  Menu.h  MyException.cpp  MyException.h  Route.cpp  Route.h  checkingAccuracyOfTheInput.cpp  checkingAccuracyOfTheInput.h  main.cpp
firstEx/: Element.cpp  List.cpp  List.h  Route.cpp  Route.h
menuAndCo/: Menu.cpp  Menu.h  MyException.h  safeInput.h
secondEx/: TextAnalysis.cpp  TextAnalysis.h
